[gd_scene load_steps=6 format=3 uid="uid://bvgrclr8u5pap"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_0hiev"]
[ext_resource type="PackedScene" uid="uid://iotl2edukrg6" path="res://Scenes/player.tscn" id="1_y26xr"]

[sub_resource type="Curve2D" id="Curve2D_m1mra"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 764.358, -861.912, 0, 0, 0, 0, 779.358, 763.088, 0, 0, 0, 0, -856.642, 751.088, 0, 0, 0, 0, -843.642, -855.912, 0, 0, 0, 0, 764.358, -861.912)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_t4rd4"]
font_size = 48

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5xk3a"]

[node name="Game" type="Node2D"]
script = ExtResource("1_0hiev")

[node name="Player" parent="." instance=ExtResource("1_y26xr")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.4, 0.4)

[node name="EnemySpawnPath" type="Path2D" parent="."]
position = Vector2(35.6418, 57.9121)
curve = SubResource("Curve2D_m1mra")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(764.358, -861.912)
rotation = 1.56157

[node name="EnemySpawnRate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollectibleSpawnRate" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CollectibleDespawnRate" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_left = -707.0
offset_top = -701.0
offset_right = -655.0
offset_bottom = -678.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_t4rd4")

[node name="Boundary" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2(0, 747)
shape = SubResource("WorldBoundaryShape2D_5xk3a")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundary"]
position = Vector2(0, -752)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_5xk3a")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundary"]
position = Vector2(-752, -5)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_5xk3a")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundary"]
position = Vector2(750, -3)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_5xk3a")

[connection signal="timeout" from="EnemySpawnRate" to="." method="_on_enemy_spawn_rate_timeout"]
[connection signal="timeout" from="CollectibleSpawnRate" to="." method="_on_collectible_spawn_rate_timeout"]
[connection signal="timeout" from="CollectibleDespawnRate" to="." method="_on_collectible_despawn_rate_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
